[package]
name = "rusty_paserk"
version = "0.4.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/rusty-paserk"
description = "Platform Agnostic Serializable Keys (PASERK) is an extension on PASETO for key management"
license = "MIT"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["v4"]
# V3 contains NIST approved algoritms only
v3 = [
  "dep:hmac",
  "dep:aes",
  "dep:ctr",
  "dep:sha2",
  "dep:p384",
  "dep:pbkdf2",
  "rusty_paseto/v3_local",
  "rusty_paseto/v3_public",
]
# V4 is recommended
v4 = [
  "dep:sha2",
  "dep:blake2",
  "dep:chacha20",
  "dep:ed25519-dalek",
  "dep:curve25519-dalek",
  "dep:argon2",
  "rusty_paseto/v4_local",
  "rusty_paseto/v4_public"
]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]

[dependencies]
rusty_paseto = { version = "0.7.0", default-features = false, features = ["core"] }
subtle = "2.5.0"
generic-array = "0.14"
base64ct = "1.6.0"
base64 = "0.22.1"
cipher = "0.4.4"
digest = { version = "0.10.7", features = ["mac"] }
rand = "0.8.5"

# V4
chacha20 = { version = "0.9.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
ed25519-dalek = { version = "2.0.0", features = ["hazmat"], optional = true }
curve25519-dalek = { version = "4.0.0", optional = true }
argon2 = { version = "0.5.0", optional = true }

# V3
aes = { version = "0.8.2", optional = true }
ctr = { version = "0.9.2", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.2", optional = true }
p384 = { version = "0.13.0", optional = true, features = ["ecdh", "pkcs8"] }
pbkdf2 = { version = "0.12.1", optional = true }

arbitrary = { version = "1.3", features = ["derive"], optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
ff = "0.13.0"

libtest-mimic = "0.8.1"

[profile.dev.package."*"]
opt-level = 2
debug = false
incremental = false

[[test]]
name = "test-vectors"
path = "tests/vectors.rs"
harness = false

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
